packages/kit/test/apps/basics/src/routes/errors/nested-error-page/$error.svelte
<script context="module">

</script>

<script>
	/** @type {number} */
	export let status;

	/** @type {Error} */
	export let error;
</script>

<h1>Nested error page</h1>
<p id="nested-error-status">status: {status}</p>
<p id="nested-error-message">error.message: {error.message}</p>